fix: Disabled checkboxes are now visible

--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -106,3 +106,8 @@ button {
 .ReactModal__Body--open {
   overflow: hidden;
 }
+
+input[type="checkbox"]:disabled {
+  cursor: not-allowed;
+  opacity: 100% !important;
+}
